--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,29 +6,30 @@
 
 body {
   font-family: Arial, sans-serif;
+  padding-top: 50px;
 }
 
 #container {
   margin: 0 auto;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  height: 100vh;
+  height: 650px;
   width: 700px;
-  background-color: #d85ba8;
+  background-color: rgb(248, 243, 243);
 }
 
 .count-wrapper {
   display: block;
   width: 300px;
   height: 72px;
-  border: 5px solid gray;
+  border: 6px solid rgb(169, 168, 168);
   border-radius: 48px;
   padding: 15px;
-  margin-top: 30px;
   text-align: center;
-  background-color: aqua;
+  background-color: #dad3cb;
 }
 
 .count-text {
@@ -37,46 +38,7 @@ body {
   letter-spacing: 2px;
 }
 
-/* #board {
-  display: grid;
-  grid-template-columns: repeat(4, 100px);
-  grid-gap: 10px;
-  margin: 20px auto;
-  background-color: red;
-} */
-
 #canvas {
-  border: 4px solid #ccc;
-  border-radius: 11px;
+  border: 7px solid rgb(169, 168, 168);
+  border-radius: 13px;
 }
-
-
-/* 
-#canvas {
-  border: 1px solid #ccc;
-}
-
-#game-container {
-  text-align: center;
-  background-color: aqua;
-}
-
-#board {
-  display: grid;
-  grid-template-columns: repeat(4, 100px);
-  grid-gap: 10px;
-  margin: 20px auto;
-  background-color: red;
-}
-
-.tile {
-  width: 100px;
-  height: 100px;
-  background-color: #c037a0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  color: #776e65;
-  border-radius: 5px;
-} */
